--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-orbit-theme"]
 	path = themes/hugo-orbit-theme
-	url = git@github.com:nmenetrier/hugo-orbit-theme.git
+	url = https://github.com/nmenetrier/hugo-orbit-theme.git
