--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ languageCode = "en-us"
 defaultContentLanguage = "fr"
 title = "CV Nicolas MENETRIER"
 theme = "hugo-orbit-theme"
-googleAnalytics = "UA-XXXXXXX-Y"
+#googleAnalytics = "UA-XXXXXXX-Y"
 
 # Do not build files for websites. Need them? Set to false
 disableRSS = true
